--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,44 +1,25 @@
 docs:
   - title: Getting Started
     children:
-      - title: "Quick-Start Guide"
-        url: /docs/quick-start-guide/
-      - title: "Structure"
-        url: /docs/structure/
-      - title: "Installation"
-        url: /docs/installation/
-      - title: "Upgrading"
-        url: /docs/upgrading/
-
-  - title: Customization
-    children:
-      - title: "Configuration"
-        url: /docs/configuration/
-      - title: "Navigation"
-        url: /docs/navigation/
-      - title: "UI Text"
-        url: /docs/ui-text/
-      - title: "Authors"
-        url: /docs/authors/
-      - title: "Layouts"
-        url: /docs/layouts/
+      - title: "Home"
+        url: /
+      - title: "FAQ"
+        url: /faq/
+      - title: "Glossary"
+        url: /glossary/
 
   - title: Content
     children:
-      - title: "Working with Posts"
-        url: /docs/posts/
-      - title: "Working with Pages"
-        url: /docs/pages/
-      - title: "Working with Collections"
-        url: /docs/collections/
-      - title: "Helpers"
-        url: /docs/helpers/
-      - title: "Utility Classes"
-        url: /docs/utility-classes/
+      - title: "Working with Desktop SDK"
+        url: /desktop-sdk/
+      - title: "Working with Mobie SDK"
+        url: /mobile-sdk/
+      - title: "Working with VR SDK"
+        url: /vr-sdk/
 
   - title: Extras
     children:
       - title: "Whitepaper"
-        url: /docs/whitepaper/
+        url: /whitepaper/
       - title: "One Pager"
-        url: /docs/onepager/
+        url: /onepager/
