--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,12 +21,10 @@ docs:
     children:
       - title: "SDK Overview"
         url: /sdk-overview
-      - title: "SDK FAQ"
-        url: /sdk-faq
       - title: "Scripts"
         url: /scripts
-      - title: "Marketplace"
-        url: /marketplace
+      - title: "Asset Store"
+        url: /asset-store
 
 
   - title: Reading
