--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -40,6 +40,8 @@ docs:
 
   - title: Reading
     children:
+      - title: "Consensus"
+        url: /consensus
       - title: "Whitepaper"
         url: /whitepaper
       - title: "One Pager"
